--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Sitio web de Dietetica Curcuma. Comer saludable es un arte que se aprende">
     <meta name="keywords" content="Productos Sin Tacc, Sin Azucar, Stevia, Saludables, Keto, Sin Lactosa">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="shortcut icon" href="./images/logoicono3.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -65,7 +67,7 @@
                   </div>
                 </div>
                   <div class="contenedor-productos-carrito carrito-escondido">
-                    <div class="row-product">
+                    <div class="listadoProductos">
                     <div class="productos-carrito">
                     </div>
                     </div>
@@ -145,5 +147,6 @@
 <script>
   AOS.init();
 </script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
