--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Contanos tu experiencia en el local">
     <meta name="keywords" content="Experiencia saludable, Consultas, Referencias, Escribinos, Mail, Reclamos">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="shortcut icon" href="../images/logoicono3.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -69,7 +71,7 @@
                   </div>
                 </div>
                   <div class="contenedor-productos-carrito carrito-escondido">
-                    <div class="row-product">
+                    <div class="listadoProductos">
                     <div class="productos-carrito">
                     </div>
                     </div>
@@ -109,9 +111,11 @@
     <footer>
         <p>Todos los derechos reservados a Dietética Cúrcuma.</p>
     </footer>
+
     <script src="../scripts/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
         AOS.init();
       </script>
