--- a/pages/marketplace.html
+++ b/pages/marketplace.html
@@ -7,6 +7,8 @@
     <meta name="" content="">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="shortcut icon" href="../images/logoicono3.png">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
     <title>Dietetica Curcuma</title>
@@ -69,14 +71,6 @@
                   </div>
                 </div>
                   <div class="contenedor-productos-carrito carrito-escondido">
-                    <div class="row-product">
-                    <div class="productos-carrito">
-                    </div>
-                    </div>
-                    <div class="total-cart">
-                        <h3>Total</h3>
-                        <span class="total">Carrito Vacío</span>
-                    </div>
                   </div>
             </div>
             </div>
@@ -84,89 +78,15 @@
         <h1>Comer saludable es un arte que se aprende.</h1>
     </header>
 
-    <section class="productosavender" >
-        <div class="card" id="productoA1" style="width: 18rem;">
-            <img src="../images/marketplace/manifrito.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="nombreProducto">Solo - Maní frito con merkén</h5>
-                <h6 class="precioProducto">$3000</h6>
-                <p class="infoProducto">200g</p>
-                <div class="col-4">
-                    <div class="form-group js-quantity form-quantity">
-                    <div class="form-row m-0 align-items-center" data-component="product.quantity">
-                    <span class="js-quantity-down form-quantity-icon btn" data-component="product.quantity.minus">
-                    <svg class="icon-inline icon-w-12 icon-lg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M368 224H16c-8.84 0-16 7.16-16 16v32c0 8.84 7.16 16 16 16h352c8.84 0 16-7.16 16-16v-32c0-8.84-7.16-16-16-16z"></path></svg>
-                    </span>
-                    <div class="form-control-container col" data-component="product.adding-amount">
-                    <input type="number" id="cantidadProducto" class=" form-control js-quantity-input form-control-inline" autocorrect="off" autocapitalize="off" name="quantity" value="1" min="1" aria-label="Cambiar cantidad" data-component="adding-amount.value">
-                    </div>
-                    <span class="js-quantity-up form-quantity-icon btn" data-component="product.quantity.plus">
-                    <svg class="icon-inline icon-w-12 icon-lg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M368 224H224V80c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v144H16c-8.84 0-16 7.16-16 16v32c0 8.84 7.16 16 16 16h144v144c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V288h144c8.84 0 16-7.16 16-16v-32c0-8.84-7.16-16-16-16z"></path></svg>
-                    </span>
-                    </div>
-                    </div>
-                </div>
-                <button type="button" class="seleccionarProducto">Agregar al carrito</button>
-            </div>
-        </div>
-
-        <div class="card" id="productoA2" style="width: 18rem;">
-            <img src="../images/marketplace/fideosintegralesespinaca.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="nombreProducto">Cereal - Fideos Integrales Espinaca</h5>
-              <h6 class="precioProducto">$4000</h6>
-              <p class="infoProducto">260g</p>
-              <div class="col-4">
-                <div class="form-group js-quantity form-quantity">
-                <div class="form-row m-0 align-items-center" data-component="product.quantity">
-                <span class="js-quantity-down form-quantity-icon btn" data-component="product.quantity.minus">
-                <svg class="icon-inline icon-w-12 icon-lg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M368 224H16c-8.84 0-16 7.16-16 16v32c0 8.84 7.16 16 16 16h352c8.84 0 16-7.16 16-16v-32c0-8.84-7.16-16-16-16z"></path></svg>
-                </span>
-                <div class="form-control-container col" data-component="product.adding-amount">
-                <input type="number" id="cantidadProducto" class=" form-control js-quantity-input form-control-inline" autocorrect="off" autocapitalize="off" name="quantity" value="1" min="1" aria-label="Cambiar cantidad" data-component="adding-amount.value">
-                </div>
-                <span class="js-quantity-up form-quantity-icon btn" data-component="product.quantity.plus">
-                <svg class="icon-inline icon-w-12 icon-lg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M368 224H224V80c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v144H16c-8.84 0-16 7.16-16 16v32c0 8.84 7.16 16 16 16h144v144c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V288h144c8.84 0 16-7.16 16-16v-32c0-8.84-7.16-16-16-16z"></path></svg>
-                </span>
-                </div>
-                </div>
-                </div>
-                <button type="button" class="seleccionarProducto">Agregar al carrito</button>
-            </div>
-        </div>
-
-        <div class="card" id="productoA3" style="width: 18rem;">
-            <img src="../images/marketplace/premezclacrepes.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="nombreProducto">Natural Pop - Premezcla Crepes Veggie</h5>
-              <h6 class="precioProducto">$3200</h6>
-              <p class="infoProducto">60g</p>
-              <div class="col-4">
-                <div class="form-group js-quantity form-quantity">
-                <div class="form-row m-0 align-items-center" data-component="product.quantity">
-                <span class="js-quantity-down form-quantity-icon btn" data-component="product.quantity.minus">
-                <svg class="icon-inline icon-w-12 icon-lg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M368 224H16c-8.84 0-16 7.16-16 16v32c0 8.84 7.16 16 16 16h352c8.84 0 16-7.16 16-16v-32c0-8.84-7.16-16-16-16z"></path></svg>
-                </span>
-                <div class="form-control-container col" data-component="product.adding-amount">
-                <input type="number" id="cantidadProducto" class=" form-control js-quantity-input form-control-inline" autocorrect="off" autocapitalize="off" name="quantity" value="1" min="1" aria-label="Cambiar cantidad" data-component="adding-amount.value">
-                </div>
-                <span class="js-quantity-up form-quantity-icon btn" data-component="product.quantity.plus">
-                <svg class="icon-inline icon-w-12 icon-lg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M368 224H224V80c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v144H16c-8.84 0-16 7.16-16 16v32c0 8.84 7.16 16 16 16h144v144c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V288h144c8.84 0 16-7.16 16-16v-32c0-8.84-7.16-16-16-16z"></path></svg>
-                </span>
-                </div>
-                </div>
-                </div>
-                <button type="button" class="seleccionarProducto">Agregar al carrito</button>
-            </div>
-        </div>
-
-
+    <section class="productosavender" id="productosavender" >
     </section>
 
     <footer>
         <p>Todos los derechos reservados a Dietética Cúrcuma.</p>
     </footer>
-
+    
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="../scripts/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
